# datastore-orm

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tests.py
datastore_orm/: __init__.py  model.py  pyproject.toml
