[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datastore-orm"
version = "3.0.0"
description = "datastore-orm wraps google-cloud-datastore in a lightweight ORM and helps you easily migrate away from NDB"
authors = [{ name = "Chaitanya Nettem", email = "chaitanya@kubric.io" }]

dependencies = ["google-cloud-datastore>=2.8.1,<=2.20.2"]

urls = {"HomePage" = "https://github.com/cirbuk/datastore-orm"}

[tool.setuptools]
packages = ["datastore_orm"]